test/chainsaw/tests/aim/service/routing/gateway-not-exists/cluster-image.yaml
apiVersion: aim.silogen.ai/v1alpha1
kind: AIMClusterModel
metadata:
  name: llama-3-8b-routing-no-gateway
spec:
  image: ghcr.io/silogen/aim-dummy:0.1.3
  defaultServiceTemplate: llama-3-8b-latency-routing-no-gateway
  resources:
    limits:
      amd.com/gpu: '1'
      memory: 48Gi
    requests:
      amd.com/gpu: '1'
      cpu: '4'
      memory: 40Gi
