test/chainsaw/tests/aim/service/routing/gateway-not-exists/cluster-template.yaml
apiVersion: aim.silogen.ai/v1alpha1
kind: AIMClusterServiceTemplate
metadata:
  name: llama-3-8b-latency-routing-no-gateway
spec:
  modelName: llama-3-8b-routing-no-gateway
  metric: latency
  gpuSelector:
    count: 1
    model: MI300X
